[package]
name = "control_craft"
version = "0.1.0"
authors = ["Cygnixy Team"]
edition = "2021"
license = "MIT"
description = "Mouse and Keyboard Control Library for Windows, enabling programmatic input simulation using the Windows API."
repository = "https://github.com/cygnixy/control_craft"
readme = "README.md"
keywords = ["windows", "mouse", "keyboard", "input", "automation"]


[dependencies]
windows = { version = "0.57", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
